// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@rdfjs-elements/formats-pretty/serializers turtle preserves line breaks in literals 1`] = `
"
<http://example.org/a> <http://example.org/b> \\"\\"\\"The first line
The second line
  more\\"\\"\\" .

<http://example.org/x> <http://example.org/y> \\"\\"\\"Long
description
with datatype\\"\\"\\"^^<http://example.org/multiline> .

<http://example.org/m> <http://example.org/n> \\"\\"\\"multiline
with language\\"\\"\\"@en-US .

<http://example.org/f> <http://example.org/g> \\"\\"\\"The first line
\\"The quoted line\\"
  more\\"\\"\\" .

<http://example.org/r> <http://example.org/q> \\"\\"\\"Quote
at end\\\\\\"\\"\\"\\" .

"
`;

exports[`@rdfjs-elements/formats-pretty/serializers turtle preserves line breaks in literals when using prefixes 1`] = `
"@prefix ex: <http://example.org/> .

ex:a ex:b \\"\\"\\"The first line
The second line
  more\\"\\"\\" .

ex:x ex:y \\"\\"\\"Long
description
with datatype\\"\\"\\"^^ex:multiline .

ex:m ex:n \\"\\"\\"multiline
with language\\"\\"\\"@en-US .

ex:f ex:g \\"\\"\\"The first line
\\"The quoted line\\"
  more\\"\\"\\" .

ex:r ex:q \\"\\"\\"Quote
at end\\\\\\"\\"\\"\\" .

"
`;
